# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .travis.yml  Dockerfile  README.md  Vagrantfile  app.py  config.py  github_oauth.py  item.py  items_view_model.py  log_config.py  main.tf  mongo_items.py  outputs.tf  packages_ToDoApp.dot  pyproject.toml  requirements-test.txt  requirements.txt  session_items.py  setup.ps1  setup.sh  status.py  trello_config.py  trello_items.py  variables.tf  view_model.py
docs/: c4model.drawio  classes_ToDoApp.dot  packages_ToDoApp.dot
minikube/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
mongo_db/: config.py  item_store.py  store.py  user_store.py
scripts/: deploy.sh
templates/: add.html  admin.html  delete.html  editdetails.html  index.html  layout.html
tests/: test_app.py  test_app_e2e.py  test_app_integration.py  test_item.py  test_user.py  test_view_model.py
tests_e2e/: test_app_e2e.py
user/: user.py  user_access.py  user_role.py
