[tool.poetry]
name = "DevOps-Course-Starter"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
python-dotenv = "^0.15.0"
requests = "2.24.0"
gunicorn = "20.0.4"
pymongo = {extras = ["srv"], version = "^3.11.3"}

[tool.poetry.dev-dependencies]
pytest = "6.0.1"
pytest-cov = "2.10.1"
selenium = "3.141.0"
mongomock = "^3.22.1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
